--- a/app.json
+++ b/app.json
@@ -14,7 +14,8 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "googleServicesFile": "./google-services.json"
       },
       "edgeToEdgeEnabled": true
     },
@@ -25,6 +26,7 @@
     },
     "plugins": [
       "expo-router",
+      "expo-auth-session",
       [
         "expo-splash-screen",
         {
